--- a/src/components/Forms/InputGroup/InputGroup.module.css
+++ b/src/components/Forms/InputGroup/InputGroup.module.css
@@ -10,6 +10,11 @@
     color: var(--text);
 }
 
+.textField {
+    flex: 1;
+    min-width: 0;
+}
+
 .inputWrapper {
     display: flex;
     align-items: center;
@@ -28,6 +33,7 @@
 
 .input {
     flex: 1;
+    width: 100%;
     padding: 10px 0;
     border: none;
     background: transparent;
