--- a/src/components/Overlay/Tooltip/Tooltip.module.css
+++ b/src/components/Overlay/Tooltip/Tooltip.module.css
@@ -48,11 +48,18 @@
   animation: tooltipOut 100ms ease-in;
 }
 
+/* Standalone mode (when used with open prop) */
+.tooltip.standalone {
+  position: absolute;
+  pointer-events: none;
+}
+
 @keyframes tooltipIn {
   from {
     opacity: 0;
     transform: scale(0.95);
   }
+
   to {
     opacity: 1;
     transform: scale(1);
@@ -64,6 +71,7 @@
     opacity: 1;
     transform: scale(1);
   }
+
   to {
     opacity: 0;
     transform: scale(0.95);
